--- a/style_sheet.css
+++ b/style_sheet.css
@@ -1,6 +1,6 @@
 :root {
   --color-green: #4a666b;
-  --color-green-hover: #b6c1c3;
+  --color-green-hover: #778c90;
   --color-black: #180222;
   --color-light-blue: #c3e7ef;
   --color-light-blue-hover: #b8dae3;
@@ -41,15 +41,6 @@ html {
 /* --------------------- pages --------------------- */
 
 /* --------------------- home page --------------------- */
-
-#block-yui_3_17_2_1_1720015239357_19291 {
-  /* lines between lines in second section */
-  h3:not(:first-child) {
-    border-top: 1px solid var(--color-blue);
-    padding-top: 10px;
-    margin-top: -17px;
-  }
-}
 
 #block-f9993bdf5703f951614f,
 #block-58433e1404ca0f91b26a,
@@ -115,6 +106,14 @@ section[data-section-id="66f7036ff0b4252c55d3ec1a"] {
   /* putting padding on top/bottom of text at top of spaces page */
   @media screen and (max-width: 900px) {
     padding: 10px 0;
+  }
+}
+
+#block-yui_3_17_2_1_1701187349187_43530 {
+  .accordion-item__description {
+    min-width: fit-content !important;
+    max-width: 100% !important;
+    padding-right: 20px !important;
   }
 }
 
@@ -312,13 +311,19 @@ a.text-click:hover {
   rect:hover {
     fill-opacity: 0.3;
     fill: var(--color-light-blue);
+  }
+  
+  polygon:hover {
+    fill-opacity: 0.3;
+    fill: var(--color-light-blue);
     filter: blur(10px);
   }
 }
 
 .space_desc_box {
   /* box with dashed edges- used in Spaces page */
-  border: 1px dashed;
+  border: 2px solid #A9A9A9;
+  box-shadow: 2px 5px 5px #A9A9A9;
   padding: 1% 3% 2% 3%;
   height: 400px;
   background: white;
@@ -359,7 +364,9 @@ a.text-click:hover {
   }
   
   .par {
-    margin-top: -20px;
+    @media screen and (max-width: 900px) {
+    	margin-top: -20px;
+  	}
   }
 }
 
@@ -395,7 +402,7 @@ a.text-click:hover {
 
 .icon_text_list {
   /* List of icons next to text */
-  width: 200px;
+  min-width: 200px;
 
   .item {
     margin-top: -10px;
@@ -419,6 +426,22 @@ a.text-click:hover {
     }
   }
 }
+
+.amenities_text_list {
+  /* List of icons next to text */
+  min-width: 200px;
+
+  .item {
+    margin-top: -10px;
+
+    img {
+      height: 20px !important;
+      float: left;
+      margin-right: 10px;
+    }
+  }
+}
+
 
 .two_columns {
   /* Puts two divs next to each other */
@@ -496,7 +519,8 @@ a.text-click:hover {
 }
 
 #amenities_col {
-  grid-template-columns: 1fr 1fr;
+  width: 100%;
+  grid-template-columns: repeat(2, minmax(250px, 1fr));
   column-gap: 0px;
 
   @media screen and (max-width: 900px) {
@@ -587,5 +611,54 @@ a.text-click:hover {
   
   .par_spacer {
     margin-bottom: 10px;
+  }
+}
+
+.procedures {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 50px;
+
+  @media screen and (max-width: 900px) {
+    grid-template-columns: 1fr;
+  }
+  
+  .procedures_box {
+    min-width: 0;
+    height: 440px;
+    background: linear-gradient(white 0%, white 30%,var(--color-green) 30%, var(--color-green) 100%);
+    box-shadow: 2px 5px 5px #A9A9A9;
+    border-radius: 10px;
+
+    img_holder {
+      display: block;
+      height: 28%;
+      width: 100%;
+
+      img {
+        max-width: 80%;
+      }
+    }
+
+    h3 {
+      display: block;
+      color: white;
+      text-align: center;
+      font-size: 130%;
+      margin: 15px 10px 5px 10px;
+    }
+
+    p2 {
+      display: block;
+      color: white;
+      font-size: 100%;
+      margin: 15px 10px 5px 10px;
+    }
+  }
+
+  .procedures_box:hover {
+   	background: linear-gradient(#f9fafa 0%, #f9fafa 30%, var(--color-green-hover) 30%, var(--color-green-hover) 100%);
+    box-shadow: 5px 8px 5px #A9A9A9;
   }
 }
