I lied- maybe final for v1.0?

--- a/style_sheet.css
+++ b/style_sheet.css
@@ -21,17 +21,20 @@ html {
   scroll-behavior: smooth;
 }
 
+/* lines between header links */
 .header-nav-list .header-nav-item:not(:first-child) {
   border-left: 1px solid var(--color-blue);
   margin-left: 1vw !important;
   padding-left: 1vw !important;
 }
 
+/* putting padding on full width slide shows */
 .gallery-fullscreen-slideshow[data-width="full"] {
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
+/* changing acordion divider lines to be simpler and blue */
 .accordion-divider {
   color: transparent !important;
   height: 0 !important;
@@ -40,35 +43,8 @@ html {
 
 /* --------------------- pages --------------------- */
 
-/* --------------------- home page --------------------- */
-
-#block-f9993bdf5703f951614f,
-#block-58433e1404ca0f91b26a,
-#block-a57592029078f77dbbd1,
-#block-7019dc591979b8ab9e14 {
-  /* justifying and padding text in booking process*/
-  padding-left: 5%;
-  padding-right: 5%;
-  max-width: 90%;
-  text-align: justify;
-}
-
-#block-99c7d16e95030a1a0d53,
-#block-90322793d0b24229d39a,
-#block-f120455e0cf5d7653b58,
-#block-3f66047e7d7d98e97b45 {
-  /* modifying title size in booking process boxes */
-  .sqsrte-text-color--accent {
-    font-size: 1.3em;
-
-    @media screen and (min-width: 900px) {
-      font-size: 95%;
-    }
-  }
-}
-
 /* colored side borders on amenities page */
-body#collection-65660ef32544614ca59367b1 {
+#collection-65660ef32544614ca59367b1 {
   border-left: 50px solid var(--color-yellow);
   border-right: 50px solid var(--color-yellow);
 
@@ -90,6 +66,7 @@ body#collection-65660ef32544614ca59367b1 {
   }
 }
 
+/* making section background match skedda on booking pages */
 [data-section-id="66958a2e8ed68a155fb7bda7"],
 [data-section-id="66bb8569d40cb46c35978718"] .section-background {
   background-color: #f8f9fa;
@@ -102,13 +79,14 @@ body#collection-65660ef32544614ca59367b1 {
   }
 }
 
+/* putting padding on top/bottom of text at top of spaces page */
 section[data-section-id="66f7036ff0b4252c55d3ec1a"] {
-  /* putting padding on top/bottom of text at top of spaces page */
   @media screen and (max-width: 900px) {
     padding: 10px 0;
   }
 }
 
+/* making faq dropdowns fit better */
 #block-yui_3_17_2_1_1701187349187_43530 {
   .accordion-item__description {
     min-width: fit-content !important;
@@ -118,26 +96,6 @@ section[data-section-id="66f7036ff0b4252c55d3ec1a"] {
 }
 
 /* --------------------- w javascript --------------------- */
-
-a.text-click {
-  /* if code box with "clickable" and hyperlink makes whole box clickable */
-  /* <a href="url" class="text-click"></a> */
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  color: rgba(0, 0, 0, 0.5) !important;
-  border-radius: 30px;
-}
-
-a.text-click:hover {
-  @media screen and (min-width: 900px) {
-    background: var(--color-light-blue);
-    opacity: 0.1;
-  }
-}
 
 #back-to-top {
   /* scroll back to the map on spaces page */
@@ -519,6 +477,7 @@ a.text-click:hover {
 }
 
 #amenities_col {
+  /* columns inside amenities columns */
   width: 100%;
   grid-template-columns: repeat(2, minmax(250px, 1fr));
   column-gap: 0px;
@@ -615,6 +574,7 @@ a.text-click:hover {
 }
 
 .procedures {
+  /* procedures on home page */
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
