--- a/style_sheet.css
+++ b/style_sheet.css
@@ -703,7 +703,7 @@ html {
 
   .tooltiptext {
     visibility: hidden;
-    min-width: 100px;
+    min-width: 75px;
     height: auto;
     background: white;
     border: 1px solid #a9a9a9;
@@ -712,7 +712,7 @@ html {
     padding: 5px;
    
     position: absolute;
-    z-index: 1;
+    z-index: 100;
     top: -5px;
     margin-left: 5px;
   }
@@ -720,4 +720,10 @@ html {
 
 .tooltip:hover .tooltiptext {
   visibility: visible;
+}
+
+@media screen and (max-width: 900px) {
+  .tooltip .tooltiptext {
+    max-width: 45% !important;
+  }
 }
