--- a/scheduler/style.css
+++ b/scheduler/style.css
@@ -7,11 +7,11 @@ html, body {
   padding: 0;
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   font-size: 14px;
+	height: 100%;
 }
 
 #calendar {
-  max-width: 90vw;
-	
+  max-width: 95vw;
   margin: 40px auto;
 }
 
