--- a/scheduler/style.css
+++ b/scheduler/style.css
@@ -2,12 +2,20 @@
 @import url(https://fullcalendar.io/releases/daygrid/6.1.17/main.min.css);
 @import url(https://fullcalendar.io/releases/list/6.1.17/main.min.css);
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
-  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+  font-family:
+    Arial,
+    Helvetica Neue,
+    Helvetica,
+    sans-serif;
   font-size: 14px;
-	height: 100%;
+}
+
+#holding_box {
+  height: 100vw;
 }
 
 #calendar {
@@ -15,6 +23,4 @@ html, body {
   margin: 40px auto;
 }
 
-.fc-today {
-  background: transparent !important; /* hack. because demo will always start out on current day */
-    
+
