--- a/scheduler/style.css
+++ b/scheduler/style.css
@@ -12,7 +12,7 @@ body {
     Helvetica,
     sans-serif;
   font-size: 14px;
-	height: 100%;
+  height: 100%;
 }
 
 #holding_box {
@@ -21,16 +21,16 @@ body {
 #calendar {
   max-width: 100vw;
   height: 100%;
-	background: white;
-	margin-left: 20px;
-	margin-right: 20px;
+  background: white;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .top_img {
-	display: block;
-	height: 10vw;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 10px;
-	margin-bottom: 10px;
+  display: block;
+  height: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
