--- a/scheduler/style.css
+++ b/scheduler/style.css
@@ -21,9 +21,11 @@ body {
 #calendar {
   max-width: 100vw;
   height: 100%;
-  background: white;
-  margin-left: 20px;
-  margin-right: 20px;
+	margin: 20px;
+}
+
+.fc-day-today {
+  background: transparent !important;
 }
 
 .top_img {
